2013-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fixes to be able to read MIFF
	written by ImageMagick 6.X, including DirectClass grayscale
	images.  Interoperabilty is not completely assured since
	ImageMagick is not consistent with itself and may only be able to
	read the file it just wrote.  Reading DirectClass grayscale RLE
	compressed images is not supported yet.

2013-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (MagickFreeCMSTransform): Only delete the CMS
	transform if it is non-null.  If lcms returned a null transform,
	an assertion was thrown in lcms when the pointer was freed.
	Problem was reported by James Bardin.

2013-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c: PseudoClass format was written incorrectly in
	that sample storage size is supposed to be selected based on the
	size of the colormap, but it was being selected based on the depth
	parameter instead, leading to excessively sized files and failure
	to read what was written.  RLE compressed formats had the sense of
	the alpha channel inverted from the other compression methods, and
	contrary to the specification.  PseudoClass with Alpha was not
	supported at all, and reading a file claiming to be such caused an
	assertion to be thrown.  Note that these fixes may cause some
	existing files to no longer be read correctly.

	* coders/xpm.c (ReadXPMImage): XPM is rarely used to produce
	16-bit output.  Set image depth based on the colormap.

	* coders/tim.c (ReadTIMImage): PSX TIM is not able to produce more
	than 8-bit output, set image depth appropriately.

2013-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Increase rows-per-strip as
	required to try to avoid more than 32K strips per image since some
	programs seem to use a 16-bit strip counter and fail with more
	than 32K strips.  Problem was reported by Kevin Myers.
