@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2013-09-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>tests/rwfile.tap: Add tests for PGM and PPM ASCII subformats.</li>
+<li>coders/pnm.c (WritePNMImage): PGM &quot;P2&quot; format writer was broken
+at 8-bit depth due to lack of white-space between the output
+values.  Fixed now.</li>
+</ul>
+</blockquote>
 <p>2013-09-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
